# RocketWeb

./: Cargo.toml  Rocket.toml  diesel.toml
html/: index.html  index1.html  index2.html  main.html
migrations/2024-12-18-154412_create_persons/: down.sql  up.sql
src/: basic_auth.rs  main.rs  repositories.rs  schema.rs
src/models/: models.rs
ssl/: cert.pem  key.pem
